packages/libtorrent_flutter/lib/src/ffi_bindings.dart


  TorrentBridgeBindings(this._lib) {
    createSession       = _lib.lookup<NativeFunction<_CreateSessionN>>('lt_create_session').asFunction<LtCreateSession>();
    destroySession      = _lib.lookup<NativeFunction<_DestroySessionN>>('lt_destroy_session').asFunction<LtDestroySession>();
    pollAlerts          = _lib.lookup<NativeFunction<_PollAlertsN>>('lt_poll_alerts').asFunction<LtPollAlerts>();
    setAlertCallback    = _lib.lookup<NativeFunction<_SetAlertCallbackN>>('lt_set_alert_callback').asFunction<LtSetAlertCallback>();
    addMagnet           = _lib.lookup<NativeFunction<_AddMagnetN>>('lt_add_magnet').asFunction<LtAddMagnet>();
    addMagnetResume = _optional('lt_add_magnet_resume', () =>
        _lib.lookup<NativeFunction<_AddMagnetResumeN>>('lt_add_magnet_resume').asFunction<LtAddMagnetResume>());
    addTorrentFile      = _lib.lookup<NativeFunction<_AddTorrentFileN>>('lt_add_torrent_file').asFunction<LtAddTorrentFile>();
    addTorrentFileResume = _optional('lt_add_torrent_file_resume', () =>
        _lib.lookup<NativeFunction<_AddTorrentFileResumeN>>('lt_add_torrent_file_resume').asFunction<LtAddTorrentFileResume>());
    removeTorrent       = _lib.lookup<NativeFunction<_RemoveTorrentN>>('lt_remove_torrent').asFunction<LtRemoveTorrent>();
    pauseTorrent        = _lib.lookup<NativeFunction<_PauseTorrentN>>('lt_pause_torrent').asFunction<LtPauseTorrent>();
    resumeTorrent       = _lib.lookup<NativeFunction<_ResumeTorrentN>>('lt_resume_torrent').asFunction<LtResumeTorrent>();
    recheckTorrent      = _lib.lookup<NativeFunction<_RecheckTorrentN>>('lt_recheck_torrent').asFunction<LtRecheckTorrent>();
    forceReannounce = _optional('lt_force_reannounce', () =>
        _lib.lookup<NativeFunction<_ForceReannounceN>>('lt_force_reannounce').asFunction<LtForceReannounce>());
    forceDhtAnnounce = _optional('lt_force_dht_announce', () =>
        _lib.lookup<NativeFunction<_ForceDhtAnnounceN>>('lt_force_dht_announce').asFunction<LtForceDhtAnnounce>());
    saveResumeData = _optional('lt_save_resume_data', () =>
        _lib.lookup<NativeFunction<_SaveResumeDataN>>('lt_save_resume_data').asFunction<LtSaveResumeData>());
    takeSavedResumeData = _optional('lt_take_saved_resume_data', () =>
        _lib.lookup<NativeFunction<_TakeSavedResumeDataN>>('lt_take_saved_resume_data').asFunction<LtTakeSavedResumeData>());
    loadResumeData = _optional('lt_load_resume_data', () =>
        _lib.lookup<NativeFunction<_LoadResumeDataN>>('lt_load_resume_data').asFunction<LtLoadResumeData>());
    getTorrentCount     = _lib.lookup<NativeFunction<_GetTorrentCountN>>('lt_get_torrent_count').asFunction<LtGetTorrentCount>();
    getAllStatuses       = _lib.lookup<NativeFunction<_GetAllStatusesN>>('lt_get_all_statuses').asFunction<LtGetAllStatuses>();
    getStatus           = _lib.lookup<NativeFunction<_GetStatusN>>('lt_get_status').asFunction<LtGetStatus>();
    getFileCount        = _lib.lookup<NativeFunction<_GetFileCountN>>('lt_get_file_count').asFunction<LtGetFileCount>();
    getFiles            = _lib.lookup<NativeFunction<_GetFilesN>>('lt_get_files').asFunction<LtGetFiles>();
    getFileProgress = _optional('lt_get_file_progress', () =>
        _lib.lookup<NativeFunction<_GetFileProgressN>>('lt_get_file_progress').asFunction<LtGetFileProgress>());
    getFilePriorities = _optional('lt_get_file_priorities', () =>
        _lib.lookup<NativeFunction<_GetFilePrioritiesN>>('lt_get_file_priorities').asFunction<LtGetFilePriorities>());
    setFilePriorities   = _lib.lookup<NativeFunction<_SetFilePrioritiesN>>('lt_set_file_priorities').asFunction<LtSetFilePriorities>();
    getTrackers = _optional('lt_get_trackers', () =>
        _lib.lookup<NativeFunction<_GetTrackersN>>('lt_get_trackers').asFunction<LtGetTrackers>());
    addTracker = _optional('lt_add_tracker', () =>
        _lib.lookup<NativeFunction<_AddTrackerN>>('lt_add_tracker').asFunction<LtAddTracker>());
    removeTracker = _optional('lt_remove_tracker', () =>
        _lib.lookup<NativeFunction<_RemoveTrackerN>>('lt_remove_tracker').asFunction<LtRemoveTracker>());
    setSequentialDownload = _optional('lt_set_sequential_download', () =>
        _lib.lookup<NativeFunction<_SetSequentialDownloadN>>('lt_set_sequential_download').asFunction<LtSetSequentialDownload>());
    setSuperSeeding = _optional('lt_set_super_seeding', () =>
        _lib.lookup<NativeFunction<_SetSuperSeedingN>>('lt_set_super_seeding').asFunction<LtSetSuperSeeding>());
    setPieceDeadline = _optional('lt_set_piece_deadline', () =>
        _lib.lookup<NativeFunction<_SetPieceDeadlineN>>('lt_set_piece_deadline').asFunction<LtSetPieceDeadline>());
    startStream         = _lib.lookup<NativeFunction<_StartStreamN>>('lt_start_stream').asFunction<LtStartStream>();
    stopStream          = _lib.lookup<NativeFunction<_StopStreamN>>('lt_stop_stream').asFunction<LtStopStream>();
    getStreamStatus     = _lib.lookup<NativeFunction<_GetStreamStatusN>>('lt_get_stream_status').asFunction<LtGetStreamStatus>();
    getAllStreamStatuses = _lib.lookup<NativeFunction<_GetAllStreamStatusesN>>('lt_get_all_stream_statuses').asFunction<LtGetAllStreamStatuses>();
    setDownloadLimit    = _lib.lookup<NativeFunction<_SetDownloadLimitN>>('lt_set_download_limit').asFunction<LtSetDownloadLimit>();
    setUploadLimit      = _lib.lookup<NativeFunction<_SetUploadLimitN>>('lt_set_upload_limit').asFunction<LtSetUploadLimit>();
    preloadStream       = _lib.lookup<NativeFunction<_PreloadStreamN>>('lt_preload_stream').asFunction<LtPreloadStream>();
    setCacheSettings    = _lib.lookup<NativeFunction<_SetCacheSettingsN>>('lt_set_cache_settings').asFunction<LtSetCacheSettings>();
    configureSession    = _lib.lookup<NativeFunction<_ConfigureSessionN>>('lt_configure_session').asFunction<LtConfigureSession>();
    getDefaultConfig    = _lib.lookup<NativeFunction<_GetDefaultConfigN>>('lt_get_default_config').asFunction<LtGetDefaultConfig>();
    getActiveStreams     = _lib.lookup<NativeFunction<_GetActiveStreamsN>>('lt_get_active_streams').asFunction<LtGetActiveStreams>();
    lastError           = _lib.lookup<NativeFunction<_LastErrorN>>('lt_last_error').asFunction<LtLastError>();
    version             = _lib.lookup<NativeFunction<_VersionN>>('lt_version').asFunction<LtVersion>();
  }

  factory TorrentBridgeBindings.open() => TorrentBridgeBindings(_openNativeLib());
}
